Fix button render overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,13 @@
   width: 100%;
   margin-bottom: 1em;
 }
-  
+
+.btn {
+  overflow: visible;
+  padding-left: 5px;
+  padding-right:5px;
+}
+
 /* MED AND UP */
 @media screen and (min-width: 601px) {
   #main-header {
